# topomesh

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  diffuse.py  get_dem_data.sh  pad_string.bzl  pipeline.bzl  roundtrip_stl.sh  setup.sh  zion_dem_names.sh  zscale.py
diffuse_binding/: BUILD.bazel  diffuse.cpp  diffuse.hpp  diffuse_binding.py  diffuse_py.cpp  test_diffuse_binding.py
setup/: setup_osx.sh  setup_ubuntu.sh
src/meshtools/: BUILD.bazel  hash.hpp  llh2ecef.cpp  llh2gnomonic.cpp  ply.cpp  ply.hpp  ply2stl.cpp  print_stl_dimensions.cpp  roundtrip_ply.cpp  roundtrip_stl.cpp  scale_stl.cpp  size_stl.cpp  stl.cpp  stl.hpp
