load(":pad_string.bzl", "pad")
load(":pipeline.bzl", "process_terrains")

# copernicus coordinatescat
north_range = range(24, 72)

max_east = 39

max_west = 135

copernicus_coords = \
    ["N{n}_00_W{w}_00".format(
        n = pad(n, 2),
        w = pad(w, 3),
    ) for n in north_range for w in range(1, max_west)] + \
    ["N{n}_00_E{e}_00".format(
        e = pad(e, 3),
        n = pad(n, 2),
    ) for n in north_range for e in range(0, max_east)]

# all the topographies to be processed
topos = {
    "socal": {
        "dems": glob(["data/socal/*3as*.tif"]),
        # "resize_args": "-outsize 20% 0 -r cubic",
        "region_of_interest_command": "gdal_translate -projwin_srs EPSG:4326 -projwin -122.2 35.5 -115 30",
        "hmm_args": "--triangles 5000000 -e 0.000001 --blur 2",
        "target_size": 10,
        "output_scaling": "llh2ecef",
        "z_exag": 5,
    },
    "hawaii_cudem": {
        "dems": glob(["data/cudem_hawaii/*.tif"]),
        "resize_args": "-outsize 25% 0 -r cubic",
        # "contour_level": 0.,
        "hmm_args": "--triangles 10000000 -e 0.00001",  # --border-size 300",
        "target_size": 10,
        "gdal_merge_args": "-a_nodata -5800",
        "output_scaling": "llh2ecef",
        "z_exag": 5,
    },
    "sfbay_topobathy": {
        "dems": glob(["data/TOPOBATHY_SAN_FRANCISCO_ELEV_METERS/TOPOBATHY_SAN_FRANCISCO_ELEV_METERS.tif"]),
        #                                                      ulx    uly     lrx    lry
        "region_of_interest_command": "gdal_translate -projwin 538300 4194644 558250 4175530",
        #"resize_args": "-outsize 5% 0 -r cubic",
        "contour_level": 0.,
        "hmm_args": "--triangles 1000000 -e 0.0001 -b 0.7",  # --border-size 300",
        "output_scaling": "ned",
        "target_size": 10,
        "z_exag": 1,
    },
    "measures_greenland": {
        "dems": glob(["data/measures_greenland/*/*/*/*/tile_*_dem_*.tif"]),
        # original is 49860 x 90000
        "region_of_interest_command": "gdal_translate -srcwin 12000 82000 16001 8000 -outsize 16001 8000",
        # don't shrink, it's fine
        "resize_args": "-outsize 25% 0 -r cubic",
        # "contour_level": 0.,
        #"hmm_args": "--triangles 2000c000 -e 0.001 --blur 4 --gamma 0.2"
        "hmm_args": "--triangles 10000000 -e 0.0001 -b 0.7",
        "output_scaling": "ned",
        "target_size": 10,
        "z_exag": 1,
    },
    "gebco_sub_ice": {
        "dems": glob(["data/gebco_2022_sub_ice/*.tif"]),
        "resize_args": "-outsize 3% 0 -r cubic",
        #"hmm_args": "--triangles 2000000 -e 0.001 --blur 4 --gamma 0.2",
        "hmm_args": "--triangles 2000000 -e 0.0001 -b 0.7",
        "output_scaling": "llh2ecef",
        "target_size": 10,
        "z_exag": 5,
    },
    "gebco": {
        "dems": glob(["data/gebco_2022/*.tif"]),
        "resize_args": "-outsize 3% 0 -r cubic",
        #"hmm_args": "--triangles 2000000 -e 0.001 --blur 4 --gamma 0.2",
        "hmm_args": "--triangles 2000000 -e 0.0001 -b 0.7",
        "output_scaling": "llh2ecef",
        "target_size": 10,
        "z_exag": 5,
    },
    "hawaii_gebco": {
        "dems": glob(["data/gebco_2022/*.tif"]),
        "region_of_interest_command": "gdal_translate -projwin_srs EPSG:4326 -projwin -161.4 23.8 -153.2 17.7",
        "hmm_args": "--triangles 50000000 -e 0.000000000000001 --blur 1",
        "target_size": 10,
        "output_scaling": "llh2ecef",
        "z_exag": 5,
    },
    "copernicus": {
        "dems": glob([
            "data/COP90_hh/Copernicus_DSM_COG_30_{coord}_DEM.tif".format(coord = coord)
            for coord in copernicus_coords
        ]),
        #"resize_args": "-outsize 1% 0 -r cubic",
        "resize_args": "-outsize 5% 0 -r cubic",
        #"resize_args": -outsize 10% 0 -r cubic",
        "hmm_args": "--triangles 2000000 -e 0.001 --blur 4 --gamma 0.2",
        #"hmm_args": "--triangles 2000000 -e 0.0001 -b 0.7",
        "output_scaling": "llh2ecef",
        "target_size": 10,
        "z_exag": 5,
    },
}

process_terrains(topos)

## convert to ellipsoid
#genrule(
#    name = "ellipsoid",
#    srcs = [
#        "copernicus.stl",
#    ],
#    outs = ["ellipsoid.ply"],
#    cmd = """\
#$(location //src/meshtools:llh2ecef) $< $@
#du -hs $@
#""",
#    tools = [
#        "//src/meshtools:llh2ecef",
#    ]
#)
